Fix wrong margin for controlls
Ticket: #9097

--- a/pub/System/TimeTrackerPlugin/timetracker.css
+++ b/pub/System/TimeTrackerPlugin/timetracker.css
@@ -11,7 +11,7 @@ div.TimeTrackerMessage {
 .TimeTrackerError {
     background-color: red;
 }
-.TimeTrackerGeneralUtilities > table {
+.TimeTrackerControlls {
     margin-top: 5px;
 }
 table.TimeTrackerTable th {
